			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

21-Feb-2002
~~~~~~~~~~~
Changes to options now take effect instantly. The old Apply button is gone,
and Cancel is now Revert.

20-Feb-2002
~~~~~~~~~~~
Internal changes to the options system. See text at start of options.c.

19-Feb-2002
~~~~~~~~~~~
Changed 'Ignore case' option to 'Intelligent sorting'. A non-ASCII sort now
handles numbers in a sensible way, so that 'file10' comes after 'file9', etc
(Micah Dowty).
Fix possible type conversion problem in charset conversion code
(reported by Serban Udrea).
Allow xml:lang attribute in AppInfo files so give translations; see
ROX-Filer/AppInfo.xml for an example (suggested by Wilbert Berendsen).

18-Feb-2002
~~~~~~~~~~~
Try to compile against Gtk+-2.0 first, and only fallback to 1.2 if it's not
found.
In an Infobox, strip trailing newlines from file's output as Gtk+-2.0
labels display them.
Scroll in whole items with Gtk+-1.2, plus better cursor alignment (Bernard
Jungen).

17-Feb-2002 (Release 1.2.0)
~~~~~~~~~~~
New stable release.

13-Feb-2002 (Release 1.1.14)
~~~~~~~~~~~
Pressing Escape in a dialog box now closes the box.

12-Feb-2002
~~~~~~~~~~~
Fix compile problem if iconv.h is missing and allow CPPFLAGS settings to
be used in Makefile (Jim Knoble).
Undo 'double clicking unselects' change (requested by Andreas).

11-Feb-2002
~~~~~~~~~~~
Updated Spanish translation (Marcelo Ramos).
Updated French manual translation (Arnaud Calvo).

08-Feb-2002 (Release 1.1.13)
~~~~~~~~~~~
Use fixed font in minibuffer.

07-Feb-2002
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).
Updated Russian translation (Dmitry Elfimov).

06-Feb-2002
~~~~~~~~~~~
When dragging a lasso box around items, limit the allowed overlap (the
space you can drag over the edge of the next item without selecting it)
so that very wide items (eg, those with details) are easier to select
(requested by Andras Mohari).

04-Feb-2002
~~~~~~~~~~~
Updated Italian translation (Denis Manente).
