@@ -166,6 +166,7 @@ The key will appear next to the menu item and you can just press that key withou
     <toggle name='bind_menu_button_2' label='Menu on button 2 (RISC OS style)'>Use button 2, the middle button (click both buttons at once on two button mice), to pop up the menu. If off, use button 3 (right) instead.</toggle>
   </section>
   <section title='Types'>
+    <toggle name='use_gnomevfs' label='Use the GNOME-VFS MIME types'>Use GNOME VFS library to work out MIME types for files, instead of normal ROX system (see below).</toggle>
     <toggle name='display_ignore_exec' label='Ignore eXecutable bit for known extensions'>If a file has a known extension (eg '.gif') then ignore the executable bit. This is useful if you have files on a Windows-type filesystem which are being shown as executable programs.</toggle>
     <toggle name='display_colour_types' label='Colour files based on their types'>Filenames (and details) are coloured according to the file's type.</toggle>
     <hbox>
