@@ -6,6 +6,8 @@
 ~~~~~~~~~~~
 Changes to options now take effect instantly. The old Apply button is gone,
 and Cancel is now Revert.
+Fixed stupid bug in charset conversions (reported by Andras Mohari).
+Initial support for gnome-vfs (Mark Heily).
 
 20-Feb-2002
 ~~~~~~~~~~~
